Working through Number classes